force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/CRMforNonProfit__George_Settings__mdt.object-meta.xml
<CustomObject>
    <label>George Settings</label>
    <pluralLabel>George Settings</pluralLabel>
</CustomObject>