force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Accounts_Production_URL__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Accounts_Production_URL__c</fullName>
    <label>Accounts Production URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>