force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Client_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>