force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>