force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Notifications_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Notifications_Site_Name__c</fullName>
    <inlineHelpText>Public site to receive the George notifications on.</inlineHelpText>
    <label>Notifications Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>