force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Public_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Public_Key__c</fullName>
    <label>Public Key</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>