force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Redirect_URI__c</fullName>
    <label>Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>