force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Token_Endpoint__c</fullName>
    <label>Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>