force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Use_Production_Integration__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Use_Production_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Production Integration</label>
    <type>Checkbox</type>
</CustomField>