force-app/main/default/objects/CRMforNonProfit__George_Settings__mdt/fields/CRMforNonProfit__Web_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Web_Api_Key__c</fullName>
    <label>Web Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>